--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </fieldset>
         <button class="btn-login">Login</button>
         <span id="password-login"><a href="#">Esqueceu a senha?</a></span>
-        <span id="account-login">Não possui conta?&nbsp;&nbsp;<a href="cadastro.html">Crie a sua</a></span>
+        <span id="account-login">Não possui uma conta?&nbsp;&nbsp;<a href="cadastro.html">Crie a sua</a></span>
       </form>
     </div>
   </main>
