--- a/index.html
+++ b/index.html
@@ -1,48 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Login</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login</title>
-  
-  <link rel="shortcut icon" href="./assets/images/Favicon.png" type="image/x-icon" />
+		<link rel="shortcut icon" href="./assets/images/Favicon.png" type="image/x-icon" />
 
-  <link rel="stylesheet" href="./assets/css/style.css" />
-  <link rel="stylesheet" href="./assets/css/media.css">
-</head>
+		<link rel="stylesheet" href="./assets/css/style.css" />
+		<link rel="stylesheet" href="./assets/css/media.css" />
+	</head>
 
-<body>
-  <main class="main-login">
-    <div class="left-login">
-      <h1>Faça login<br>E entre para o desafio DEV</h1>
-      <img src="./assets/images/cat-astronaut-animate.svg" class="left-login-image"
-        alt="Animação de um gato astronauta" />
-    </div>
+	<body>
+        
+		<main class="main-login">
+			<div class="left-login">
+				<h1>Faça login<br />E entre para o desafio DEV</h1>
+				<img src="./assets/images/cat-astronaut-animate.svg" class="left-login-image" alt="Animação de um gato astronauta" />
+			</div>
 
-    <div class="right-login">
-      <form action="" class="card-login">
-        <h1>LOGIN</h1>
-        <fieldset>
+			<div class="right-login">
+				<form action="" class="card-login">
+					<h1>LOGIN</h1>
+					<fieldset>
+						<div class="textfield">
+							<label for="usuario">Usuário</label>
+							<input type="text" name="usuario" placeholder="Usuário" required />
+						</div>
 
-          <div class="textfield">
-            <label for="usuario">Usuário</label>
-            <input type="text" name="usuario" placeholder="Usuário" required />
-          </div>
-
-          <div class="textfield">
-            <label for="senha">Senha</label>
-            <input type="password" name="senha" placeholder="Senha" required />
-          </div>
-        </fieldset>
-        <button class="btn-login">Login</button>
-        <span id="password-login"><a href="#">Esqueceu a senha?</a></span>
-        <span id="account-login">Não possui uma conta?&nbsp;&nbsp;<a href="cadastro.html">Crie a sua</a></span>
-      </form>
-    </div>
-  </main>
-
-</body>
-
+						<div class="textfield">
+							<label for="senha">Senha</label>
+							<input type="password" name="senha" placeholder="Senha" required />
+						</div>
+					</fieldset>
+					<button class="btn-login">Login</button>
+					<span id="password-login"><a href="#">Esqueceu a senha?</a></span>
+					<span id="account-login">Não possui uma conta?&nbsp;&nbsp;<a href="cadastro.html">Crie a sua</a></span>
+				</form>
+			</div>
+		</main>
+        <script src="https://kit.fontawesome.com/5a5cc96caa.js" crossorigin="anonymous"></script>
+	</body>
 </html>
